--- a/labs/01/index.Rmd
+++ b/labs/01/index.Rmd
@@ -43,14 +43,14 @@ install.packages(c("readr","tidyr","dplyr"))
 
 ```{r , eval=-3}
 require(readr)
-original_data = read_delim("~/Downloads/Brauer2008_DataSet1.tds", delim="\t")
+original_data = read_delim("https://raw.githubusercontent.com/garthtarr/visR/gh-pages/Brauer2008_DataSet1.tds", delim = "\t")
 View(original_data) # opens a spreadsheet view in RStudio
 dim(original_data)
 ```
 
 Fix the name column by splitting on `||`, remove white space and drop unecessary variables.  We also want to ensure that we have [tidy data](http://vita.had.co.nz/papers/tidy-data.pdf) -- each variable should be one column - the column headers are values not variable names.
 
-```{r, warning = FALSE}
+```{r, warning = FALSE, tidy=FALSE}
 require(dplyr)
 require(tidyr)
 cleaned_data = original_data %>%
@@ -67,9 +67,9 @@ The above code chunk is doing a lot of processing very sucinctly using the pipe 
 
 ### Visualise the data
 
-#### Classical approach
+Below is a classical approach using `ggplot2` to visualise ... explanation of what I've done below.
 
-```{r}
+```{r, warning=FALSE, tidy=FALSE}
 library(ggplot2)
 cleaned_data %>%
   filter(name == "LEU1") %>%
@@ -94,14 +94,32 @@ cleaned_data %>%
   facet_wrap(~name + systematic_name, scales = "free_y")
 ```
 
+## Basic
 
-#### Interactive approach: SHINY!!
+### Reimplement the above plots in ggvis
 
-Convert this basic shiny app from `ggplot2` to `ggvis`.  The aim here is two fold: 
-1. understand how the components link within the `shiny` app; and 
+
+
+### Play with htmlwidgets 
+
+E.g. pairsD3, d3heatmap, ... 
+
+## Intermediate: Shiny app
+
+Take an example shiny app that has ggplot2 graphics and reimplement it with ggvis.
+
+Convert [this](https://raw.githubusercontent.com/garthtarr/visR/gh-pages/labs/01/app.R) shiny app from `ggplot2` to `ggvis`.  The aim here is two fold: 
+
+1. Understand how the components link within the `shiny` app; and
 2. Move beyond static plots with `ggvis`.
 
 Try adding a line of best fit using `geom_smooth()` in `ggplot2` or `layer_model_predictions()` in `ggvis`.
+
+## Advanced: Add functionality to the shiny app
+
+Add analytics to the shiny app and add in some htmlwidgets.
+
+
 
 ## Reference
 
