--- a/labs/02/index.Rmd
+++ b/labs/02/index.Rmd
@@ -25,13 +25,13 @@ opts_chunk$set(tidy = TRUE, cache=FALSE)
 ## Characterizing mutation-expression networks in multiple cancers
 
 
-- <a href="https://twitter.com/shazanfar">Shila Ghazanfar's</a>  [BIS2015 poster](https://github.com/garthtarr/visR/labs/02/BIS2015FF_Ghazanfar.pdf) has an accompanying Shiny app.
+- <a href="https://twitter.com/shazanfar">Shila Ghazanfar's</a>  [BIS2015 poster](https://github.com/garthtarr/visR/blob/gh-pages/labs/02/BIS2015FF_Ghazanfar.pdf) has an accompanying Shiny app.
 - 4,443 tumours analysed over 19 cancers from TCGA
 - R Shiny app to explore results among different parameters is available to download at [www.maths.usyd.edu.au/u/sheilag/pacmen.zip](http://www.maths.usyd.edu.au/u/sheilag/pacmen.zip)
 
 ### Instructions
 
-- Check out Shila's poster <a href="https://twitter.com/shazanfar"><i class="fa fa-twitter"></i></a>
+- Check out Shila's fast forward poster session slide <a href="https://github.com/garthtarr/visR/blob/gh-pages/labs/02/BIS2015FF_Ghazanfar.pdf"><i class="fa fa-link"></i></a>
 - Download and unzip from [www.maths.usyd.edu.au/u/sheilag/pacmen.zip](http://www.maths.usyd.edu.au/u/sheilag/pacmen.zip)
 - Install a few R packages including customised version of D3network using:
 
@@ -48,7 +48,7 @@ devtools::install_github("garthtarr/networkD3")
 shiny::runApp('~/Downloads/pacmen')
 ```
 
-Alternatively you can run the app by opening either the `server.R` or the `ui.R` files in RStudio and then clicking the `Run App` button in the top right of the code editor window.
+- Alternatively you can run the app by opening either the `server.R` or the `ui.R` files in RStudio and then clicking the `Run App` button in the top right of the code editor window.
 
 - Explore the app to get a feel for the sorts of things you can do with shiny.
 - Check out Shila's twitter account <a href="https://twitter.com/shazanfar"><i class="fa fa-twitter"></i></a>
@@ -66,5 +66,4 @@ devtools::install_github("garthtarr/networkD3")
 
 ## Reference
 
-- Robinson D (2015). "Cleaning and visualizing genomic data: a case study in tidy analysis", blog post. http://varianceexplained.org/r/tidy-genomics/
-- Brauer et al. (2008). Coordination of Growth Rate, Cell Cycle, Stress Response, and Metabolic Activity in Yeast,
+- 
