--- a/lectures/01/index.Rmd
+++ b/lectures/01/index.Rmd
@@ -27,10 +27,10 @@ require(knitr)
 <br> 
 
 - Importance of visualising data
-- Key packages
-    - googleVis
-    - htmlwidgets
-    - ggvis
+- Interactive graphics in R
+    - `googleVis`
+    - `htmlwidgets`
+    - `ggvis`
 - Shiny
 - Your turn
 
@@ -66,8 +66,28 @@ par(op1)
 It may not be long before presentations with static plots are as old fashioned as whipping out your overhead transparencies.
 
 
-<img src = "ohp.png" width=600 />
+<img src = "ohp.png" width=700 />
 
+
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aXV-yaFmQNk" frameborder="0" allowfullscreen></iframe>
+
+--- 
+
+## Gratuitous kittens
+
+<img src="Cat-Playing-Game-on-iPad.gif" height=500 /> <img src="QAyXWuC.gif" height=500 />
+
+--- .segue
+
+# We are living in the future
+
+--- .segue
+
+# We are living in the future
+
+<div align="right"><font color="white" size=6>Why are our graphics living in the past?</font></div>
 
 --- .segue
 
@@ -77,15 +97,23 @@ It may not be long before presentations with static plots are as old fashioned a
 
 ## Overview of googleVis
 
+```{r, eval=FALSE}
+install.packages("googleVis")
+require(googleVis)
+demo(WorldBank, package="googleVis")
+```
+
+<br>
+
 - [Markus Gesmann](http://www.magesblog.com/) created the [`googleVis`](https://github.com/mages/googleVis) package which accesses  the [Google Chart API](https://developers.google.com/chart/)  directly from R
 
 - The functions of the package allow users to visualise data with the Google Chart Tools **without uploading their data to Google**
 
-- The output of googleVis functions is html code that contains the data and references to JavaScript functions hosted by Google
+- The output of googleVis functions is **html code** that contains the data and references to JavaScript functions hosted by Google
 
-- **Limitation**: requires internet access to work and some charts require Flash.
+<br>
 
-See also: **Using the Google Visualisation API with R**, 
+Using the Google Visualisation API with R, 
   [The R Journal, 3(2):40-44, December 2011](http://journal.r-project.org/archive/2011-2/RJournal_2011-2_Gesmann+de~Castillo.pdf) and googleVis [package vignette](http://cran.r-project.org/web/packages/googleVis/vignettes/googleVis.pdf)
 
 ---
@@ -131,6 +159,33 @@ See also: **Using the Google Visualisation API with R**,
 
 --- 
 
+## An application of googleVis: the mplot package
+
+### Get it on GitHub <i class="fa fa-github"></i>
+
+```{r eval=FALSE}
+install.packages("devtools")
+devtools::install_github("garthtarr/mplot")
+require(mplot)
+```
+
+### ... or get it on CRAN
+
+```{r eval=FALSE}
+install.packages("mplot")
+```
+
+### Main functions
+
+- `vis()` for **variable inclusion** and **model stability** plots
+- `af()` for the **adaptive fence**
+- `bglmnet()` for **bootstrapping glmnet**
+- `mplot()` for an interactive **shiny interface**
+
+Tarr G, Mueller S and Welsh AH (2015). “mplot: An R package for graphical model stability and variable selection.” <a href="http://arxiv.org/abs/1509.07583">arXiv:1509.07583 [stat.ME]</a>.
+
+---
+
 ### Examples from the `mplot` package
 
 ```{r,eval=FALSE,tidy=TRUE}
@@ -168,6 +223,15 @@ plot(af.d)
 plot(af.d, width=850, tag = "chart", height=500, fontSize=20, left=50, chartWidth="55%")
 ```
 
+--- 
+
+## Limitations of googleVis
+
+<br>
+
+- Requires **internet access** to work 
+- some charts require **Flash**
+- not very customisable
 
 --- .segue
 
@@ -189,6 +253,7 @@ Some examples:
 - [`dygraphs`](https://rstudio.github.io/dygraphs/): charting time-series data
 - [`leaflet`](https://rstudio.github.io/leaflet/): dynamic maps
 - [`DT`](https://rstudio.github.io/DT/): interactive HTML data tables
+- [`rpivotTable`](https://github.com/smartinsightsfromdata/rpivotTable): build pivot tables to dynamically slice, dice and plot your data
 
 ---
 
@@ -196,39 +261,138 @@ Some examples:
 
 <img src="htmlwidgets.png" height=800px />
 
+
+--- 
+
+## What's so great about htmlwidgets?
+
+<br>
+
+- most will work without internet access
+- customisable (sort of)
+- active community
+    - some packages are backed by RStudio
+    - Kent Russel ([@timelyportfolio](https://twitter.com/timelyportfolio)) has made one widget each week this year
+- if you're keen you can make your own... it's _relatively_ easy to adapt any of the multitude of [D3 examples](https://github.com/mbostock/d3/wiki/Gallery)
+
 --- .segue
 
 # ggvis
 
 ---
 
+## pipes: a fundamental new operator in R
+
+<img src="Z.jpg" />
+
+```{r, eval=FALSE, tidy = FALSE}
+install.packages("magrittr")
+require(magrittr)
+awesome_data =
+  raw_interesting_data %>%
+  transform(somehow) %>%
+  filter(the_good_parts) %>%
+  finalize
+```
+
+--- pipes: a fundamental new operator in R
+
+```{r, eval = TRUE}
+require(magrittr)
+x = rnorm(10)
+x %>% max
+max(x)
+x %>% sort
+sort(x)
+x %>% sort %>% round(1)
+round(sort(x),1)
+x %>% sort %>% round(1) %>% plot
+plot(round(sort(x),1))
+```
+
+Similar to [JavaScript's chaining](http://alignedleft.com/tutorials/d3/chaining-methods):
+
+```
+d3.select("body")
+    .append("p")
+    .text("New paragraph!");
+```
+
+### Compund assignment `%<>%`
+
+```{r, eval=TRUE}
+x %<>% sort %>% round(1)
+x
+```
+
+<br>
+
+[Read more](https://cran.r-project.org/web/packages/magrittr/vignettes/magrittr.html)
+
+---
+
 ## ggvis
 
 - Web based incarnation of ggplot2 (svg or canvas)
-- Interactivity (advanced interactivity requires an R instance in the background)
-- Under development. Recently on twitter @hadleywickham commented "goal is for 2016 to be the year of ggvis"
+- Enables simple interactivity (e.g. tooltips)
+- Advanced interactivity requires an R instance in the background (e.g. using sliders to change parameters)
 
+<br>
 
-http://ggvis.rstudio.com/
+- Not as simple as changing `ggplot()` to `ggvis()`
+- Under development - not quite production ready yet
+- Recently on twitter [@hadleywickham](https://twitter.com/hadleywickham) commented "goal is for 2016 to be the year of ggvis"
 
----
+<br>
 
+Read more: [ggvis.rstudio.com](http://ggvis.rstudio.com/)
+
+--- .segue
+
+Honourable mentions
+
+--- 
+
+### `rCharts`: Interactive JS Charts from R
+
+```{r,eval=FALSE}
+devtools::install_github("ramnathv/rCharts")
+```
+
+- [rcharts.io](http://rcharts.io)
+- Documentation is (currently) extremely limited
+
+### `plotly`:  Interactive Graphics via Plotly's JS Graphing Library
+
+```{r, eval=FALSE}
+install.packages("plotly")
+```
+
+- [plot.ly/r](https://plot.ly/r)
+- takes a ggplot 2 object and converts it to an interactive chart
+- requires authentication
+
+### `rggobi`: Interface between R and GGobi
+
+To get started look at <a href="https://cran.r-project.org/doc/Rnews/Rnews_2008-2.pdf">Wickham, Lawrence, Lang, Swayne (2008). "An Introduction to rggobi", *R_News*, 8(2) 3-7</a>.
+
+--- .segue
 
 # Shiny: the democratisation of R
 
-
 ---
-
 
 ## What is Shiny?
 
-<a href="http://shiny.rstudio.com/"><img src="images/shiny.png" alt="" style="height:650px"></a>
+<a href="http://shiny.rstudio.com/"><img src="shiny.png" alt="" style="height:650px"></a>
+
+---
 
 ## How did I get started?
 
 I wanted a way to interactively explore the results of a mega-simulation study from my thesis.
 
-[spark.rstudio.com/garthtarr/n50](http://spark.rstudio.com/garthtarr/n50/)
+[garthtarr.com/apps/n50](http://garthtarr.com/apps/n50/)
 
 
 ---
@@ -237,6 +401,14 @@ I wanted a way to interactively explore the results of a mega-simulation study f
 
 <div align="right"><a href="https://garthtarr.shinyapps.io/network/"><font color="white">Shinyapps.io </font><i class="fa fa-link fa-inverse"></i></a></div>
 <div align="right"><a href="https://github.com/garthtarr/network"><font color="white">Github </font><i class="fa fa-github fa-inverse"></i></a></div>
+
+--- 
+
+## Why is Shiny awesome?
+
+- No special HTML or JavaScript knowledge required
+- Share the power of R with non R users 
+- Empower your collaborators to answer their own questions
 
 
 ---
@@ -261,7 +433,9 @@ shiny::runGitHub('network', 'garthtarr')
 
 More info: http://shiny.rstudio.com/articles/deployment-local.html
 
+---
 
+Interactivity with base and ggplot2 graphics (e.g. clicking and brushing)
 
 ---
 
@@ -302,7 +476,15 @@ install.packages("shiny")
 shiny::runGitHub("shiny-phyloseq","joey711")
 ```
 
+--- 
 
+## A few labs to choose from to get your hands dirty
+
+<img src="CYOA-logo.jpg"/>
+
+1. [Interactive graphics lab](labs/03/index.html)
+2. [Play with shiny lab](labs/02/index.html)
+3. [Harder shiny + interactive graphics lab](labs/01/index.html)
 
 
 --- .codefont
