--- a/labs/01/index.Rmd
+++ b/labs/01/index.Rmd
@@ -41,6 +41,8 @@ install.packages(c("readr","tidyr","dplyr"))
 
 ### Get the data and tidy it
 
+The data, tidying code and examples are borrowed from [here](http://varianceexplained.org/r/tidy-genomics/) and [here](http://varianceexplained.org/r/tidy-genomics-broom/).
+
 ```{r , eval=-3, message=FALSE}
 require(readr)
 original_data = read_delim("http://www.maths.usyd.edu.au/u/gartht/Brauer2008_DataSet1.tds", delim = "\t")
@@ -53,6 +55,11 @@ Fix the name column by splitting on `||`, remove white space and drop unecessary
 ```{r, warning = FALSE, tidy=FALSE, message=FALSE}
 require(dplyr)
 require(tidyr)
+
+nutrient_names <- c(G = "Glucose", L = "Leucine", P = "Phosphate",
+               S = "Sulfate", N = "Ammonia", U = "Uracil")
+
+
 cleaned_data = original_data %>%
   separate(NAME, 
            c("name", "BP", "MF", "systematic_name", "number"), 
@@ -60,7 +67,9 @@ cleaned_data = original_data %>%
   mutate_each(funs(trimws), name:systematic_name) %>%
   select(-number, -GID, -YORF, -GWEIGHT)  %>%
   gather(sample, expression, G0.05:U0.3) %>%
-  separate(sample, c("nutrient", "rate"), sep = 1, convert = TRUE)
+  separate(sample, c("nutrient", "rate"), sep = 1, convert = TRUE) %>%
+  mutate(nutrient = plyr::revalue(nutrient, nutrient_names)) %>%
+  filter(!is.na(expression), systematic_name != "")
 names(cleaned_data)
 ```
 
@@ -68,7 +77,9 @@ The above code chunk is doing a lot of processing very sucinctly using the pipe 
 
 ### Visualise the data
 
-Below is a classical approach using `ggplot2` to visualise ... explanation of what I've done below.
+Below is a classical approach using `ggplot2`.
+
+Look at one gene **LEU1**:
 
 ```{r, warning=FALSE, tidy=FALSE, fig.height=4}
 library(ggplot2)
@@ -76,24 +87,34 @@ cleaned_data %>%
   filter(name == "LEU1") %>%
   ggplot(aes(rate, expression, color = nutrient)) +
   geom_line()
+```
+
+**LEU1**'s expression is far higher (more “turned on”) when the cell is being starved of leucine than in any other condition, because in that case the cell has to synthesize its own leucine. And as the amount of leucine in the environment (the growth rate) increases, the cell can focus less on leucine production, and the expression of those genes go down. We’ve just gotten one snapshot of our gene’s regulatory network, and how it responds to external stimuli.
+
+To look at all the genes in the **leucine biosynthesis** process subset using the `BP` variable, to filter for all genes in that process, and then facet to create sub-plots for each.
+
+```{r, warning=FALSE, tidy=FALSE, fig.height=4}
 cleaned_data %>%
   filter(BP == "leucine biosynthesis") %>%
   ggplot(aes(rate, expression, color = nutrient)) +
   geom_line() +
   facet_wrap(~name)
+```
+
+**LEU1**, **LEU2**, and **LEU4** all show a similar pattern, where starvation of leucine causes higher gene expression. **LEU4** also appears to respond to glucose starvation as well. 
+
+We can do some basic model fitting, adding lines of best fit using  `geom_smooth(method = "lm", se = FALSE)`:
+
+```{r, warning=FALSE, tidy=FALSE, fig.height=4}
 cleaned_data %>%
   filter(BP == "leucine biosynthesis") %>%
   ggplot(aes(rate, expression, color = nutrient)) +
   geom_point() +
   geom_smooth(method = "lm", se = FALSE) +
   facet_wrap(~name)
-cleaned_data %>%
-  filter(BP == "sulfur metabolism") %>%
-  ggplot(aes(rate, expression, color = nutrient)) +
-  geom_point() +
-  geom_smooth(method = "lm", se = FALSE) +
-  facet_wrap(~name + systematic_name, scales = "free_y")
 ```
+
+This is great, but there are so many different genes and processes - how can we look at them all?  How do you deal with collaborators who are constantly harassing you asking for plots of different genes?  Shiny is the answer!
 
 ## Instructions
 
@@ -108,6 +129,8 @@ require(dplyr)
 require(tidyr)
 require(ggplot2)
 original_data = read_delim("http://www.maths.usyd.edu.au/u/gartht/Brauer2008_DataSet1.tds", delim = "\t")
+nutrient_names <- c(G = "Glucose", L = "Leucine", P = "Phosphate",
+               S = "Sulfate", N = "Ammonia", U = "Uracil")
 cleaned_data = original_data %>%
   separate(NAME, 
            c("name", "BP", "MF", "systematic_name", "number"), 
@@ -115,13 +138,15 @@ cleaned_data = original_data %>%
   mutate_each(funs(trimws), name:systematic_name) %>%
   select(-number, -GID, -YORF, -GWEIGHT)  %>%
   gather(sample, expression, G0.05:U0.3) %>%
-  separate(sample, c("nutrient", "rate"), sep = 1, convert = TRUE)
+  separate(sample, c("nutrient", "rate"), sep = 1, convert = TRUE) %>%
+  mutate(nutrient = plyr::revalue(nutrient, nutrient_names)) %>%
+  filter(!is.na(expression), systematic_name != "")
 ```
 - Whatever's in `global.R` will be read and executed before the shiny app loads.  If you want you can download the data set and include it in the same folder as `ui.R`, `server.R` and `global.R` then simplify the `read_delim()` function to refer to just `Brauer2008_DataSet1.tds` (without loading it over the internet every time).
 - Run the app to make sure it's working in this basic form.
 - Replace the default plot with the first plot we generated above showing results for the **LEU1** gene. Make sure this is working by running the app before proceeding any further.
 
-You want this in the `server.R` file
+- You want this in the `server.R` file
 
 ```{r, eval = FALSE}
 output$plot1 = renderPlot({
@@ -133,7 +158,7 @@ output$plot1 = renderPlot({
 })
 ```
 
-And this in the mainPanel part of the `ui.R` function:
+- And this in the mainPanel part of the `ui.R` function:
 
 ```{r, eval=FALSE}
 plotOutput("plot1")
@@ -200,6 +225,10 @@ output$plot1 = renderPlot({
 
 - OK so at this point, you should be able to plot multiple genes and toggle between the ploting just the raw data and fitting simple linear regression lines (with the raw observations in the background).
 - What if we wanted to be able to select all the genes related to a particular biological process.  We'll need a new dropdown menu and a new plot. Do this by adapting the above code.  Optionally you can include it in a new tab using `tabsetPanel` in the `ui.R` file - you can see how this is done in the solutions, but this is probably more advanced than we really need for now.
+- Once you're happy with your app, head over to [shinyapps.io](http://www.shinyapps.io/), create an account and follow the instructions to push your app to the web so you can share the link and show off your fine work to all your collaborators!  To do this, you'll first need to install these packages:
+```{r, eval=FALSE}
+install.packages(c("PKI","packrat","rsconnect"))
+```
 
 ### Suggested solution
 
