--- a/labs/02/index.Rmd
+++ b/labs/02/index.Rmd
@@ -22,7 +22,7 @@ opts_chunk$set(tidy = TRUE, cache=FALSE)
 # and can also be used to provide "solutions" to our demonstrators
 ```
 
-## Characterizing mutation-expression networks in multiple cancers
+## Case study: Characterizing mutation-expression networks in multiple cancers
 
 - <a href="https://twitter.com/shazanfar">Shila Ghazanfar's</a>  [BIS2015 poster](http://f1000research.com/posters/4-1046) has an accompanying Shiny app.
 - 4,443 tumours analysed over 19 cancers from TCGA
