--- a/index.Rmd
+++ b/index.Rmd
@@ -63,7 +63,8 @@ install.packages(c("shiny", "shinydashboard", "shinythemes", "shinyBS",
 
 **Blog posts**
 
-- 
+- Affali, D (2015) [Building Shiny apps - an interactive tutorial](http://deanattali.com/blog/building-shiny-apps-tutorial/). Accessed 10 December 2015.
+- Parkkinen J (2014) [Interactive visualizations with R - a minireview](http://ouzor.github.io/blog/2014/11/21/interactive-visualizations.html). Accessed 10 December 2015.
 
 ### Feedback
 
